--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- セクションPet Livers -->
     <main>
         <section class="PetLivers">
-            <h2 class="petlivers-title">Pet Livers</h2>
+            <h2 class="petlivers-title maxwidth">Pet Livers</h2>
             <div class="PetLivers-content">
                 <div class="petliverswrap1">
                     <div class="PetLivers-box box1">
@@ -118,7 +118,7 @@
 
         <!-- セクションAbout -->
         <section class="About">
-            <h2 class="about-title">About</h2>
+            <h2 class="about-title maxwidth">About</h2>
             <div class="about-content">
                 <!-- <div class="about-pattern"> -->
                 <img class="pattern pattern1" src="./img/deco_01.png" alt="">
@@ -171,7 +171,7 @@
             </div>
         </section>
 
-        <section class="Sponser">
+        <section class="Sponser maxwidth">
             <h2 class="Sponser-title">Sponser</h2>
             <img class="sponser-img1" src="./img/animalprotection.jpg" alt="animalprotection-img">
             <img class="sponser-img2" src="./img/animal_foundation.jpg" alt="animalfoundation-img">
@@ -179,31 +179,31 @@
         </section>
 
         <!-- ここから中村 -->
-        <section id="service">
-            <h2>Service</h2>
+        <section id="service" class="maxwidth">
+            <h2 class="maxwidth">Service</h2>
             <div class="boxs display">
-                <div class="boxright box">
+                <div class="boxleft box">
                     <div class="imgbox">
                         <img class="boximg " src="./img/icon_01.png" alt="">
-                        <div>
+                        <div class="flex">
                             <h3>Do you wanna be on TV?</h3>
                             <p>We have strong connections with the <br>
                                 media so there are plenty of <br>
                                 oportunities to be famous too!</p>
                         </div>
                     </div>
-                    <div class="imgbox">
+                    <div class="imgbox margin1">
                         <img class="boximg" src="./img/icon_02.png" alt="">
-                        <div>
-                            <h3>Even during the event we got your back</h3>
+                        <div class="flex">
+                            <h3>Even during the event we <br> got your back</h3>
                             <p>You can ask for support during your live <br>
                                 session! there will for sure a response <br>
                                 within 15 minutes after your request.</p>
                         </div>
                     </div>
-                    <div class="imgbox">
+                    <div class="imgbox margin2">
                         <img class="boximg" src="./img/icon_03.png" alt="">
-                        <div>
+                        <div class="flex">
                             <h3>Need legal support?</h3>
                             <p>We got your back here too! <br>
                                 If you are struggling paying taxes <br>
@@ -216,7 +216,7 @@
                 <div class="boxcenter box">
                     <div class="imgbox">
                         <img src="./img/icon_04.png" alt="">
-                        <div>
+                        <div class="flex">
                             <h3>Fully support</h3>
                             <p>Your audience is not increasing as it <br>
                                 was expected? we give you free pass <br>
@@ -226,16 +226,16 @@
                     </div>
                     <div class="imgbox">
                         <img src="./img/icon_05.png" alt="">
-                        <div>
+                        <div class="flex">
                             <h3>Connection</h3>
                             <p>You are also able to connect with <br>
                                 other livers and pets to interact with <br>
                                 them and also make new friends!</p>
                         </div>
                     </div>
-                    <div class="imgbox">
+                    <div class="imgbox margin3">
                         <img src="./img/icon_06.png" alt="">
-                        <div>
+                        <div class="flex">
                             <h3>Customer satisfaction</h3>
                             <p>You can see the data of your <br>
                                 customer in the platform, analyze it <br>
@@ -245,10 +245,10 @@
 
                 </div>
 
-                <div class="boxleft box">
+                <div class="boxright box">
                     <div class="imgbox">
                         <img src="./img/icon_07.png" alt="">
-                        <div>
+                        <div class="flex">
                             <h3>Free seminar</h3>
                             <p>Every month we are holding <br>
                                 informative seminars where you can <br>
@@ -258,7 +258,7 @@
                     </div>
                     <div class="imgbox">
                         <img src="./img/icon_08.png" alt="">
-                        <div>
+                        <div class="flex">
                             <h3>Good competition</h3>
                             <p>Everybody needs a good rival to improve <br>
                                 yourself and here you got a lot! there are <br>
@@ -269,7 +269,7 @@
                     </div>
                     <div class="imgbox">
                         <img src="./img/icon_09.png" alt="">
-                        <div>
+                        <div class="flex">
                             <h3>Free counseling</h3>
                             <p>Whatever and whenever you have a <br>
                                 question, do not hesitate to call the <br>
@@ -282,28 +282,29 @@
         </section>
 
         <section id="voice">
-            <h2>Customer Voice</h2>
-            <div class="v-container display">
+            <h2 class="maxwidth">Customer Voice</h2>
+            <div class="v-container ">
+                <div class="maxwidth display">
+                    <div class="voiceright">
+                        <img src="./img/voice_01.jpg" alt="">
+                    </div>
 
-                <div class="voiceright">
-                    <img src="./img/voice_01.jpg" alt="">
-                </div>
-
-                <div class="voiceleft">
-                    <p class="text1">Actual liver　Anna　</p>
-
-
-                    <p class="text2">It is the best thing that <br>
-                        happened to my life</p>
+                    <div class="voiceleft">
+                        <p class="text1">Actual liver　Anna　</p>
 
 
-                    <p class="text3">At the beggining, I wasn’t sure to put me <br>
-                        and my dog on air but after I did for the <br>
-                        first time and see all the audience willing <br>
-                        to see more and more... I was shocked! <br>
-                        I realized how much I can support <br>
-                        someone by giving them a litle time of <br>
-                        joy. </p>
+                        <p class="text2">It is the best thing that <br>
+                            happened to my life</p>
+
+
+                        <p class="text3">At the beggining, I wasn’t sure to put me <br>
+                            and my dog on air but after I did for the <br>
+                            first time and see all the audience willing <br>
+                            to see more and more... I was shocked! <br>
+                            I realized how much I can support <br>
+                            someone by giving them a litle time of <br>
+                            joy. </p>
+                    </div>
                 </div>
                 <img class="back deko1" src="./img/deco_07.png" alt="">
                 <img class="back deko2" src="./img/deco_08.png" alt="">
@@ -312,64 +313,67 @@
             </div>
         </section>
         <section id="contact">
-            <h2>Contact</h2>
-            <div class="c-container display">
-                <div class="forclient for">
-                    <h2>for Client</h2>
-                    <p>samplesamplesamplesamplesample <br>
-                        samplesamplesamplesamplesample</p>
-                    <form action="">
-                        <div class="name font"><label for="name">Name</label>
-                            <input class="area" id="name" type="text" name="yourname">
-                        </div>
-                        <div class="email font"><label for="mail">Email</label>
-                            <input class="area" id="mail" type="email" name="mail">
-                        </div>
-                        <div class="tel font"><label for="Tel">Tel</label>
-                            <input class="area" id="Tel" type="tel" name="tel">
-                        </div>
-                        <div class="content font"><label for="content">Content</label>
-                            <textarea class="area" id="content" type="text" name="yourname"></textarea>
-                        </div>
-                        <div id="btn">
-                            <input class="btn" type="button" value="submit">
-                        </div>
-                    </form>
+            <h2 class="maxwidth">Contact</h2>
+            <div class="c-container">
+                <div class="maxwidth  display">
+                    <div class="forclient for">
+                        <h2>for Client</h2>
+                        <p>samplesamplesamplesamplesample <br>
+                            samplesamplesamplesamplesample</p>
+                        <form action="">
+                            <div class="name font"><label for="name">Name</label>
+                                <input class="area" id="name" type="text" name="yourname">
+                            </div>
+                            <div class="email font"><label for="mail">Email</label>
+                                <input class="area" id="mail" type="email" name="mail">
+                            </div>
+                            <div class="tel font"><label for="Tel">Tel</label>
+                                <input class="area" id="Tel" type="tel" name="tel">
+                            </div>
+                            <div class="content font"><label for="content">Content</label>
+                                <textarea class="area" id="content" type="text" name="yourname"></textarea>
+                            </div>
+                            <div id="btn">
+                                <input class="btn" type="button" value="submit">
+                            </div>
+                        </form>
 
-                </div>
-                <div class="forliver for">
-                    <h2>for Liver</h2>
-                    <p>Do you wanna use whatsup?<br>
-                        Click below!</p>
-                    <div class="whatsapp display">
-                        <img class="img1" src="./img/arrow_01.png" alt="">
-                        <img class="img2" src="./img/whatsapp_PNG18.png" alt="">
+                    </div>
+                    <div class="forliver for">
+                        <h2>for Liver</h2>
+                        <p>Do you wanna use whatsup?<br>
+                            Click below!</p>
+                        <div class="whatsapp display maxwidth">
+                            <div class="img1"><img src="./img/arrow_01.png" alt=""></div>
+                            <div class="img2"><img src="./img/whatsapp_PNG18.png" alt=""></div>
+                        </div>
                     </div>
                 </div>
         </section>
 
         <section id="company">
-            <h2>Company</h2>
-            <div class="company display">
-                <div class="companyleft">
-                    <h3>LIVERS WALL</h3>
-                    <h4>Details</h4>
-                    <p>
-                        CEO : Cat lover Jennifer <br>
-                        tel : pets.lover@liverswall.com <br>
-                        Location : San Francisco CA <br>
-                        Services : Pet liver entertainment, <br>
-                        Social experince with pets, volunteers,<br>
-                        etc
-                    </p>
+            <h2 class="maxwidth">Company</h2>
+            <div class="company ">
+                <div class="maxwidth display">
+                    <div class="companyleft">
+                        <h3>LIVERS WALL</h3>
+                        <h4>Details</h4>
+                        <p>
+                            CEO : Cat lover Jennifer <br>
+                            tel : pets.lover@liverswall.com <br>
+                            Location : San Francisco CA <br>
+                            Services : Pet liver entertainment, <br>
+                            Social experince with pets, volunteers,<br>
+                            etc
+                        </p>
+                    </div>
+                    <div class="map">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3576.31954026505!2d127.75574976531318!3d26.31615058338822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34e513051b6aba63%3A0x758d0e90af22e324!2z5YyX6LC355S6576O5rWc44Oh44OH44Kj44Ki44K544OG44O844K344On44Oz!5e0!3m2!1sja!2sjp!4v1665801373534!5m2!1sja!2sjp"
+                            width="787" height="537.426938" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
                 </div>
-                <div class="map">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3576.31954026505!2d127.75574976531318!3d26.31615058338822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34e513051b6aba63%3A0x758d0e90af22e324!2z5YyX6LC355S6576O5rWc44Oh44OH44Kj44Ki44K544OG44O844K344On44Oz!5e0!3m2!1sja!2sjp!4v1665801373534!5m2!1sja!2sjp"
-                        width="393" height="361" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-
             </div>
         </section>
     </main>
