--- a/index.html
+++ b/index.html
@@ -232,98 +232,118 @@
             <div class="boxs display">
                 <div class="animation boxleft box">
                     <div class="imgbox">
-                        <img class="boximg " src="./img/icon_01.png" alt="">
+
                         <div class="flex">
+                            <div><img class="boximg " src="./img/icon_01.png" alt=""></div>
                             <h3>Do you wanna be on TV?</h3>
-                            <p>We have strong connections with the <br>
-                                media so there are plenty of <br>
-                                oportunities to be famous too!</p>
                         </div>
+                        <p>We have strong connections with the <br>
+                            media so there are plenty of <br>
+                            oportunities to be famous too!</p>
+
                     </div>
+
                     <div class="imgbox margin1">
-                        <img class="boximg" src="./img/icon_02.png" alt="">
                         <div class="flex">
+                            <div><img class="boximg" src="./img/icon_02.png" alt=""></div>
+
                             <h3>Even during the event we <br> got your back</h3>
-                            <p>You can ask for support during your live <br>
-                                session! there will for sure a response <br>
-                                within 15 minutes after your request.</p>
                         </div>
+                        <p>You can ask for support during your live <br>
+                            session! there will for sure a response <br>
+                            within 15 minutes after your request.</p>
+
                     </div>
                     <div class="imgbox margin2">
-                        <img class="boximg" src="./img/icon_03.png" alt="">
                         <div class="flex">
+                            <div><img class="boximg" src="./img/icon_03.png" alt=""></div>
+
                             <h3>Need legal support?</h3>
-                            <p>We got your back here too! <br>
-                                If you are struggling paying taxes <br>
-                                or organizing your incomes, we <br>
-                                have expert lawyers and <br>
-                                accountants that can help you</p>
                         </div>
+                        <p>We got your back here too! <br>
+                            If you are struggling paying taxes <br>
+                            or organizing your incomes, we <br>
+                            have expert lawyers and <br>
+                            accountants that can help you</p>
+
+
                     </div>
                 </div>
                 <div class="animation boxcenter box">
                     <div class="imgbox">
-                        <img src="./img/icon_04.png" alt="">
                         <div class="flex">
+                            <div><img src="./img/icon_04.png" alt=""></div>
+
                             <h3>Fully support</h3>
-                            <p>Your audience is not increasing as it <br>
-                                was expected? we give you free pass <br>
-                                to consult our marketing experts and <br>
-                                ask for advice</p>
                         </div>
+                        <p>Your audience is not increasing as it <br>
+                            was expected? we give you free pass <br>
+                            to consult our marketing experts and <br>
+                            ask for advice</p>
+
                     </div>
                     <div class="imgbox">
-                        <img src="./img/icon_05.png" alt="">
                         <div class="flex">
+                            <div><img src="./img/icon_05.png" alt=""></div>
+
                             <h3>Connection</h3>
-                            <p>You are also able to connect with <br>
-                                other livers and pets to interact with <br>
-                                them and also make new friends!</p>
                         </div>
+                        <p>You are also able to connect with <br>
+                            other livers and pets to interact with <br>
+                            them and also make new friends!</p>
+
                     </div>
                     <div class="imgbox margin3">
-                        <img src="./img/icon_06.png" alt="">
                         <div class="flex">
+                            <div><img src="./img/icon_06.png" alt=""></div>
+
                             <h3>Customer satisfaction</h3>
-                            <p>You can see the data of your <br>
-                                customer in the platform, analyze it <br>
-                                and prepare for the next session</p>
                         </div>
+                        <p>You can see the data of your <br>
+                            customer in the platform, analyze it <br>
+                            and prepare for the next session</p>
+
                     </div>
 
                 </div>
 
                 <div class="animation boxright box">
                     <div class="imgbox">
-                        <img src="./img/icon_07.png" alt="">
                         <div class="flex">
+                            <div><img src="./img/icon_07.png" alt=""></div>
+
                             <h3>Free seminar</h3>
-                            <p>Every month we are holding <br>
-                                informative seminars where you can <br>
-                                get new information and also <br>
-                                improve your skills.</p>
                         </div>
+                        <p>Every month we are holding <br>
+                            informative seminars where you can <br>
+                            get new information and also <br>
+                            improve your skills.</p>
+
                     </div>
                     <div class="imgbox">
-                        <img src="./img/icon_08.png" alt="">
                         <div class="flex">
+                            <div><img src="./img/icon_08.png" alt=""></div>
+
                             <h3>Good competition</h3>
-                            <p>Everybody needs a good rival to improve <br>
-                                yourself and here you got a lot! there are <br>
-                                reviews every month where you can see the <br>
-                                ranks of your popularity and get <br>
-                                motivated.</p>
                         </div>
+                        <p>Everybody needs a good rival to improve <br>
+                            yourself and here you got a lot! there are <br>
+                            reviews every month where you can see the <br>
+                            ranks of your popularity and get <br>
+                            motivated.</p>
+
                     </div>
                     <div class="imgbox">
-                        <img src="./img/icon_09.png" alt="">
                         <div class="flex">
+                            <div><img src="./img/icon_09.png" alt=""></div>
+
                             <h3>Free counseling</h3>
-                            <p>Whatever and whenever you have a <br>
-                                question, do not hesitate to call the <br>
-                                support center. We give fully attention <br>
-                                for 24 hours.</p>
                         </div>
+                        <p>Whatever and whenever you have a <br>
+                            question, do not hesitate to call the <br>
+                            support center. We give fully attention <br>
+                            for 24 hours.</p>
+
                     </div>
                 </div>
             </div>
@@ -333,11 +353,11 @@
             <h2 class="animation maxwidth">Customer Voice</h2>
             <div class="v-container ">
                 <div class="maxwidth display">
-                    <div class="animation voiceright">
-                        <img src="./img/voice_01.jpg" alt="">
+                    <div class="animation voiceleft">
+                        <span><img src="./img/voice_01.jpg" alt=""></span>
                     </div>
 
-                    <div class="animation voiceleft">
+                    <div class="animation voiceright dotto">
                         <p class="text1">Actual liver　Anna　</p>
 
 
@@ -365,7 +385,7 @@
             <div class="c-container">
                 <div class="maxwidth  display">
                     <div class="animation forclient for">
-                        <h2>for Client</h2>
+                        <div class="sph2"><h2>for Client</h2></div>
                         <p>samplesamplesamplesamplesample <br>
                             samplesamplesamplesamplesample</p>
                         <form action="">
@@ -388,7 +408,7 @@
 
                     </div>
                     <div class="animation forliver for">
-                        <h2>for Liver</h2>
+                        <div class="sph2"><h2>for Liver</h2></div>
                         <p>Do you wanna use whatsup?<br>
                             Click below!</p>
                         <div class="whatsapp display maxwidth">
@@ -419,7 +439,7 @@
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3576.31954026505!2d127.75574976531318!3d26.31615058338822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34e513051b6aba63%3A0x758d0e90af22e324!2z5YyX6LC355S6576O5rWc44Oh44OH44Kj44Ki44K544OG44O844K344On44Oz!5e0!3m2!1sja!2sjp!4v1665801373534!5m2!1sja!2sjp"
                             width="787" height="537.426938" style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            referrerpolicy="no-referrer-when-downgrade" class="google_map"></iframe>
                     </div>
                 </div>
             </div>
@@ -429,7 +449,6 @@
     <footer>
         <p>All rights reserved by Liver wall</p>
     </footer>
-
 
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
