--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <!-- キーヴィジュアル -->
     <div class="kv">
         <img class="kvbgimg" src="./img/kv_pc.png" alt="">
-        <!-- <img class="kvbgimgsp" src="./img/kv_sp.png" alt=""> -->
+        <img class="kvbgimgsp" src="./img/kv_sp.png" alt="">
 
         <div class="kv-wrapper">
             <div class="kvimg-content1">
