aboutセクション修正

--- a/index.html
+++ b/index.html
@@ -106,26 +106,26 @@
             <h2 class="animation petlivers-title maxwidth">Pet Livers</h2>
             <div class="animation PetLivers-content">
                 <div class="petliverswrap1">
-                    <div data-aos="fade-zoom-in" data-aos-delay="500" class="PetLivers-box box1">
+                    <div data-aos="fade-zoom-in" data-aos-delay="50" class="PetLivers-box box1">
                         <img src="./img/liver_01.jpg" alt="liver_01">
                         <p class="txtLivers">Liver</p>
                         <p class="txtName">Alice</p>
                         <p class="txtComent">There is no gain without pain</p>
                     </div>
-                    <div data-aos="fade-zoom-in" data-aos-delay="1000" class="PetLivers-box box2">
+                    <div data-aos="fade-zoom-in" data-aos-delay="200" class="PetLivers-box box2">
                         <img src="./img/liver_02.jpg" alt="liver_02">
                         <p class="txtLivers">Liver</p>
                         <p class="txtName">Nancy</p>
                         <p class="txtComent">Obviously there is no better friend than my dog</p>
                     </div>
-                    <div data-aos="fade-zoom-in" data-aos-delay="1500" class="PetLivers-box box3">
+                    <div data-aos="fade-zoom-in" data-aos-delay="350" class="PetLivers-box box3">
                         <img src="./img/liver_06.jpg" alt="liver_03">
                         <p class="txtLivers">Liver</p>
                         <p class="txtName">Mat</p>
                         <p class="txtComent">There is only one kind of superhero and that is my dog.</p>
 
                     </div>
-                    <div data-aos="fade-zoom-in" data-aos-delay="2000" class="PetLivers-box box4">
+                    <div data-aos="fade-zoom-in" data-aos-delay="500" class="PetLivers-box box4">
                         <img src="./img/liver_05.jpg" alt="liver_04">
                         <p class="txtLivers">Liver</p>
                         <p class="txtName">Oscar</p>
@@ -133,25 +133,25 @@
                     </div>
                 </div>
                 <div class="petliverswrap2">
-                    <div data-aos="fade-zoom-in" data-aos-delay="500" class="PetLivers-box box5">
+                    <div data-aos="fade-zoom-in" data-aos-delay="50" class="PetLivers-box box5">
                         <img src="./img/liver_08.jpg" alt="liver_05">
                         <p class="txtLivers">Liver</p>
                         <p class="txtName">Nataly</p>
                         <p class="txtComent">It is totally normal to undestand your pet feelings. </p>
                     </div>
-                    <div data-aos="fade-zoom-in" data-aos-delay="1000" class="PetLivers-box box6">
+                    <div data-aos="fade-zoom-in" data-aos-delay="200" class="PetLivers-box box6">
                         <img src="./img/liver_07.jpg" alt="liver_06">
                         <p class="txtLivers">Liver</p>
                         <p class="txtName">Zach</p>
                         <p class="txtComent">Hiking with my cat gives me a whole another perspective of nature</p>
                     </div>
-                    <div data-aos="fade-zoom-in" data-aos-delay="1500" class="PetLivers-box box7">
+                    <div data-aos="fade-zoom-in" data-aos-delay="350" class="PetLivers-box box7">
                         <img src="./img/liver_10.jpg" alt="liver_07">
                         <p class="txtLivers">Liver</p>
                         <p class="txtName">John</p>
                         <p class="txtComent">My parrot is so well trained he can immitate any Hollywood star.</p>
                     </div>
-                    <div data-aos="fade-zoom-in" data-aos-delay="2000" class="PetLivers-box box8">
+                    <div data-aos="fade-zoom-in" data-aos-delay="500" class="PetLivers-box box8">
                         <img src="./img/liver_09.jpg" alt="liver_08">
                         <p class="txtLivers">Liver</p>
                         <p class="txtName">Simona</p>
@@ -176,7 +176,7 @@
                 <!-- </div> -->
 
                 <div class="maxwidth">
-                    <div class="display displayorder">
+                    <div class="display2 displayorder">
                         <div class="animation textblock txtblock1">
                             <p class="AboutText">About us</p>
                             <p class="AboutText-content textcontent1">
@@ -193,9 +193,10 @@
                             <img data-aos="fade-left" data-aos-offset="400" data-aos-easing="ease-in"
                                 data-aos-duration="500" class="About-img1" src="./img/about_01.jpg" alt="aboutimg1">
                         </div>
+
                     </div>
 
-                    <div class="display">
+                    <div class="display3">
                         <div class="aboutimg aboutbgimg2">
                             <img data-aos="fade-right" data-aos-offset="400" data-aos-easing="ease-in"
                                 data-aos-duration="500" class="About-img2" src="./img/about_02.jpg" alt="aboutimg2">
